--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -84,8 +84,8 @@ fos_user:
     firewall_name: main
     user_class: AppBundle\Entity\User
     from_email:
-        address: "%mailer_user%"
-        sender_name: "%mailer_user%"
+        address: "%sender_address%"
+        sender_name: "%sender_name%"
     
 
 
