--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,9 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "~2.3",
-        "sensio/generator-bundle": "^3.0",        "symfony/phpunit-bridge": "^3.0"
+        "doctrine/doctrine-fixtures-bundle": "^3.1",
+        "sensio/generator-bundle": "^3.0",
+        "symfony/phpunit-bridge": "^3.0"
     },
     "scripts": {
         "symfony-scripts": [
